--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20' # Or the Node.js version your project uses
+        node-version: '20' 
 
     - name: Install dependencies
-      run: npm install # Or yarn install if you use yarn
+      run: npm install
 
